# parallel-zip-gradle-plugin

./: .gitignore  BENCHMARKS.md  LICENSE  NOTICE.md  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: ci.yml
benchmarks/: NOTES.md
benchmarks/results/: gradle-inbuild.tsv
docs/: ARCHITECTURE.md  BENCHMARKS.md  COMPATIBILITY.md  DEVELOPMENT.md  REPRODUCIBILITY.md
src/main/java/com/ljarocki/parallelzip/: ParallelZip.java  ParallelZipPlugin.java
src/main/java/com/ljarocki/parallelzip/internal/: LibdeflateNative.java  ParallelZipCopyAction.java  ParallelZipWriter.java
src/main/java/io/github/kukis13/parallelzip/: ParallelZip.java  ParallelZipPlugin.java
src/main/java/io/github/kukis13/parallelzip/internal/: LibdeflateNative.java  ParallelZipCopyAction.java  ParallelZipWriter.java
src/main/native/: CMakeLists.txt
src/main/native/jni/: pzip_libdeflate.c
src/test/java/com/ljarocki/parallelzip/: ParallelZipFunctionalTest.java
src/test/java/com/ljarocki/parallelzip/internal/: LibdeflateNativeTest.java  ParallelZipWriterBatchingTest.java  ParallelZipWriterStreamingTest.java  ParallelZipWriterZip64Test.java
src/test/java/io/github/kukis13/parallelzip/: ParallelZipFunctionalTest.java
src/test/java/io/github/kukis13/parallelzip/internal/: LibdeflateNativeTest.java  ParallelZipWriterBatchingTest.java  ParallelZipWriterStreamingTest.java  ParallelZipWriterZip64Test.java
